--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,11 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>How To Resell limited products like Sneakers</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>Start earning money with our awesome training books.</p>
+            <p>'How To Cop Sneakers & stuffs' is our first ebook : You will learn anything you have to know to make your business grow</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Download the ultimate Resell Guide : Sneaker Edition</a>
         </div>
     </div>
 </header>
