--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,8 +5,10 @@
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
                 <p class="text-faded">Start to earn money entering the Sneaker Resell Game </p>
-                <a href="#" class="btn btn-default btn-xl">Get the entire training book (50+pages illustrated & documented)</a>
-                <a href="#" class="btn btn-default btn-xl">Download 3 first pages for free</a>
+                <div class = buttons>
+                    <a href="#" class="btn btn-default btn-xl">Get the entire training book (50+pages illustrated & documented)</a>
+                    <a href="#" class="btn btn-default btn-xl">Download 3 first pages for free</a>
+                </div>
             </div>
         </div>
     </div>
